# multi-alpha-zero

./: .gitignore  Cargo.toml  README.md  config.schema.json  config.yaml
analysis/analysis-util/: Cargo.toml
analysis/analysis-util/src/: lib.rs  parquet_reader.rs  vis_arrow.rs  vis_turn.rs
analysis/chess-visualize/: Cargo.toml  dataset-viewer.schema.json  dataset-vis-config.yaml  fens.txt  interesting-lines.yaml  vis_mcts.yaml
analysis/chess-visualize/src/: lib.rs  vis_chess_board.rs  vis_chess_check.rs  vis_chess_demo_move.rs  vis_chess_render.rs  vis_chess_tensor.rs  vis_chess_util.rs
analysis/hex-visualize/: Cargo.toml
analysis/hex-visualize/src/: lib.rs  vis_hex.rs  vis_hex_board.rs
game/game-hex/: Cargo.toml
game/game-hex/src/: coords.rs  game_hex.rs  lib.rs
game/game-tri-chess/: Cargo.toml  justfile  out_new.txt
game/game-tri-chess/benches/: attack_generation_bench.rs
game/game-tri-chess/src/: basics.rs  check_information.rs  chess_game.rs  chess_game_attack_bb.rs  chess_zobrist.rs  constants.rs  fen.rs  lib.rs  moves.rs  phase.rs  pos.rs  repetition_history.rs  wasm.rs
game/oracle-tri-chess/: Cargo.toml
game/oracle-tri-chess/src/: lib.rs  oracle.rs  tablebase.rs
maz-arena/: Cargo.toml  arena-config-2-player.yaml  arena-config-chess-24m.yaml  arena-config.schema.json  arena-config.yaml
maz-arena/src/: arena_config.rs  arena_csv_writer.rs  arena_util.rs  chess_arena.rs  chess_arena_2_player.rs  hex_arena.rs  hex_player.rs  lib.rs  util.rs
maz-config/: Cargo.toml
maz-config/src/: config.rs
maz-core/: Cargo.toml
maz-core/benches/: ahash.rs  domain_mapper_encoding.rs
maz-core/src/: lib.rs  values_const.rs
maz-core/src/mapping/: aux_values.rs  chess_board_impl.rs  chess_canonical_mapper.rs  chess_domain_canonical_mapper.rs  chess_extended_canonical_mapper.rs  chess_hybrid_canonical_mapper.rs  chess_oracle_impl.rs  chess_wrapper_mapper.rs  hex_absolute_mapper.rs  hex_board_impl.rs  hex_canonical_mapper.rs  hex_wrapper_mapper.rs  mod.rs
maz-core/src/net/: batch.rs
maz-trainer/: Cargo.toml  build.rs
maz-trainer/src/: cli.rs  dynamic_self_play_game.rs  global_stats.rs  inference_protocol.rs  learning_target_modifier.rs  lib.rs  main.rs  move_selector.rs  node.rs  range.rs  search_settings.rs  self_play_game.rs  sharded_sender.rs  shared_cache.rs  stable_dirichlet.rs  steppable_mcts.rs  tree.rs
maz-trainer/src/components/: collector.rs  data_writer.rs  generator.rs  inference.rs  mod.rs  reporter.rs  standalone_collector.rs
maz-trainer/src/gpu/: coreml_provider.rs  cuda_provider.rs  dummy_gpu.rs  gpu_provider.rs  mod.rs
maz-trainer/src/trainer/: mod.rs  process_manager.rs  protocol.rs
maz-util/: Cargo.toml
maz-util/src/: convert.rs  display.rs  iter.rs  lib.rs  logging.rs  math.rs  network.rs
play/chess-frontend/: .gitmodules  README.md  index.html  orval.config.ts  package.json  vite.config.ts
play/chess-frontend/libs/: README.md
play/chess-frontend/libs/wasm/: package.json  tri-hex-chess.d.ts  tri-hex-chess_bg.js  tri-hex-chess_bg.wasm  tri-hex-chess_bg.wasm.d.ts
play/chess-frontend/misc/: util.ts
play/chess-frontend/src/: App.tsx  main.tsx  todos.ts  useClock.tsx  utils.ts
play/chess-frontend/src/class/: CheckMetadata.ts  Hex.ts  NewMove.ts  NewPiece.ts
play/chess-frontend/src/components/: Arrow.tsx  Arrows.tsx  CheckHighlight.tsx  ChessEditorView.tsx  ChessThinkTreeDrawer.tsx  Clock.tsx  ClockSetting.tsx  (+14 more)
play/chess-server/: Cargo.toml
play/chess-server/src/: docs.rs  errors.rs  main.rs  state.rs
play/chess-server/src/chess_router/: chess_routes.rs  chess_routes_dto.rs  dto_traits.rs  mod.rs  model_actor.rs  tree_serializer.rs
play/chess-tourney-frontend/: index.html  justfile  orval.config.ts  package.json  vite.config.ts
play/chess-tourney-frontend/src/: authStore.ts  common.ts  main.tsx  routes.tsx
play/chess-tourney-server/: Cargo.toml  justfile  server-config-test.yaml  server.schema.json  sqlite.db  tspconfig.yaml
play/chess-tourney-server/api-autogen/: Cargo.toml  README.md
play/chess-tourney-server/api-autogen/.openapi-generator/: FILES
play/chess-tourney-server/api-autogen/src/: lib.rs  models.rs  types.rs
play/chess-tourney-server/api-autogen/src/apis/: authentication.rs  bot_management.rs  game_history.rs  game_management.rs  leaderboard.rs  mod.rs  tournament_management.rs  user_management.rs
play/chess-tourney-server/api-autogen/src/server/: mod.rs
play/chess-tourney-server/api-design/: main.tsp  package-lock.json  package.json
play/chess-tourney-server/api/schema/: openapi.json
play/chess-tourney-server/src/: bot_thread.rs  errors.rs  game_events.rs  global_config.rs  lib.rs  main.rs  model_provider.rs  routes_auth.rs  routes_bots.rs  routes_games.rs  routes_history.rs  routes_leaderboard.rs  routes_tournament.rs  routes_users.rs  seed.rs  server.rs  util.rs  ws.rs
play/chess-tourney-server/src/entity/: bot.rs  db_color.rs  games.rs  history.rs  mod.rs  players.rs  prelude.rs  tournament.rs  users.rs
play/hex-3-frontend/: package.json
play/hex-3-frontend/src/: main.tsx
play/hex-frontend/: api-monitor.py
play/hex-frontend/src/: App.tsx
play/hex-server/: Cargo.toml
play/hex-server/src/: main.rs  state.rs
play/hex-server/src/hex/: hex_model_actor.rs  hex_routes.rs  hex_routes_logic.rs  mod.rs  tree_serializer.rs
python/: circular_external_samples_buffer.py  generate_proto.sh  logging_setup.py  main.py  pyproject.toml  salavage.py  server.py  server_settings.py  train_static.py
python/misc/: test_cf.py
python/neural/: base_interface_az.py  chess_model_basic.py  chess_model_bert_cls.py  chess_model_bert_cls_v2.py  chess_model_hybrid.py  chess_model_relative.py  chess_model_relative_coords.py  chess_model_shaw.py  hex_5_coords.py  hex_model.py  hex_model_axiom_bias_bert_cls.py  hex_model_relative.py  model_factory.py  model_wrapper.py  onnx_wrapper.py
python/scripts/: export_as_onnx.py  load_model.py  re_export_pth_as_onnx.py  stress_test_chess_model_hybrid.py  test.py  test_instability.py  vis_pos_emb.py
shared/: health.proto  training.proto
(+180 files in other folders)
