[workspace]
resolver = "2"
members = [
    "maz-arena",
    "maz-config",
    "maz-util",
    "maz-core",
    "maz-trainer",
    "game/game-tri-chess",
    "game/game-hex",
    "game/oracle-tri-chess",
    "analysis/analysis-util",
    "analysis/chess-visualize",
    "analysis/hex-visualize",
    "play/hex-server",
    "play/chess-server",
    "play/chess-tourney-server",
    "play/chess-tourney-server/api-autogen",
]

[workspace.dependencies]
analysis-util = { path = "analysis/analysis-util" }
game-tri-chess = { path = "game/game-tri-chess" }
game-hex = { path = "game/game-hex" }
api-autogen = { path = "play/chess-tourney-server/api-autogen" }
oracle-tri-chess = { path = "game/oracle-tri-chess" }

maz-util = { path = "maz-util" }
maz-core = { path = "maz-core" }
maz-trainer = { path = "maz-trainer" }
chess-tourney-server = { path = "play/chess-tourney-server" }

ort = { version = "2.0.0-rc.10", features = [
    "coreml",
    "download-binaries",
    "ndarray",
    "copy-dylibs",
    "cuda",
    "tensorrt",
    "half",
] }
ndarray = { version = "0.16.1", features = ["default"] }
half = { version = "2.6.0", features = ["alloc"] }
decorum = "0.4.0"
itertools = "0.14.0"
rand_distr = { version = "0.5.1", features = ["default", "alloc"] }
rand = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.46.1", features = ["full"] }
parquet = { version = "57.1.0" }
arrow = "57.1.0"
colored = "3.0.0"
atty = "0.2.14"
rasciigraph = "0.3.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_yaml = "0.9.33"
serde_json = "1.0.140"
once_cell = "1.21.3"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
quick_cache = "0.6.16"
bon = "3.7.0"
anyhow = "1.0.99"
chrono = "0.4.41"
thiserror = "2.0.16"
colorgrad = "0.8.0"
# FIXME: Update Schemars when aide finally updates it internally...
schemars = { version = "0.9.0", features = ["derive", "uuid1"] }
ahash = "0.8.12"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
rayon = "1.11.0"


[profile.bench]
debug = true
strip = false
opt-level = 3
lto = true

[profile.full-speed]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false

[profile.flamegraph]
inherits = "dev"
debug-assertions = false