[package]
name = "maz-arena"
version = "0.1.0"
edition = "2024"

[dependencies]
maz-core.workspace = true
game-hex.workspace = true
game-tri-chess.workspace = true
maz-util.workspace = true
oracle-tri-chess.workspace = true
maz-trainer.workspace = true

anyhow.workspace = true
itertools.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true

ort.workspace = true
ndarray.workspace = true

serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
schemars.workspace = true
clap.workspace = true
rayon.workspace = true

indicatif = "0.18.0"
skillratings = "0.27.1"
log = "0.4.27"
csv = "1.3.1"


[[bin]]
name = "arena"
path = "src/bin/arena.rs"

[[bin]]
name = "generate-arena-schema"
path = "src/bin/generate_arena_schema.rs"

[[elo]]
name = "elo"
path = "src/bin/elo.rs"
