[package]
name = "maz-util"
version = "0.1.0"
edition = "2024"

[dependencies]
maz-core.workspace = true

rand.workspace = true
ort.workspace = true
ndarray.workspace = true
once_cell.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
atty.workspace = true
half.workspace = true
rasciigraph = "0.3.0"