[package]
name = "chess-visualize"
version = "0.1.0"
edition = "2024"

[dependencies]
game-tri-chess.workspace = true
analysis-util.workspace = true
maz-core.workspace = true
maz-util.workspace = true
ort.workspace = true
maz-trainer.workspace = true
ndarray.workspace = true
svg = "0.18.0"
usvg = { version = "0.45.1", features = ["fontdb", "text"] }
fontdb = "0.23.0"
svg2pdf = "0.13.0"
roxmltree = "0.20.0"
lazy_static = "1.5.0"
crossterm = "0.29.0"
rayon = "1.11.0"
walkdir = "2.5.0"
anyhow = "1.0.99"
tracing-subscriber = "0.3.19"
colorgrad.workspace = true


clap.workspace = true
serde.workspace = true
schemars.workspace = true
serde_yaml.workspace = true
csv = "1.3.1"
rand = "0.9.2"

[[bin]]
name = "vis_chess_demos"
path = "src/bin/vis_chess_demos.rs"

[[bin]]
name = "dataset_viewer"
path = "src/bin/dataset_viewer.rs"

[[bin]]
name = "vis_chess_quick_opening"
path = "src/bin/vis_chess_quick_opening.rs"

[[bin]]
name = "dataset_correctness"
path = "src/bin/dataset_correctness.rs"

[[bin]]
name = "generate_dataset_viewer_schema"
path = "src/bin/generate_dataset_viewer_schema.rs"

[[bin]]
name = "input_tensor"
path = "src/bin/input_tensor.rs"

[[bin]]
name = "vis_chess_policy_logits"
path = "src/bin/vis_chess_policy_logits.rs"

[[bin]]
name = "openings"
path = "src/bin/openings.rs"

[[bin]]
name = "interesting_lines"
path = "src/bin/interesting_lines.rs"

[[bin]]
name = "zero_sum_calculator"
path = "src/bin/zero_sum_calculator.rs"

[[bin]]
name = "vis_fens_mcts"
path = "src/bin/vis_fens_mcts.rs"

[[bin]]
name = "attack_maps"
path = "src/bin/attack_maps.rs"
