[package]
name = "chess-tourney-server"
version = "0.1.0"
edition = "2024"

[dependencies]
api-autogen.workspace = true
game-tri-chess.workspace = true
maz-core.workspace = true
maz-util.workspace = true
ort.workspace = true
maz-trainer.workspace = true
ndarray.workspace = true
schemars.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true

axum = { version = "0.8.6", features = ["ws"] }
tokio = "1.47.1"
async-trait = "0.1"
axum-extra = { version = "0.10", features = [
    "cookie",
    "query",
    "typed-header",
] }
sqlx = { version = "0.9.0-alpha.1", features = [
    "runtime-tokio",
    "default",
    "sqlite",
    "uuid",
] }
tracing = { version = "0.1.41" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
argon2 = "0.5.3"
chrono = "0.4.42"
serde_json = "1.0.145"
http = "1"

sea-orm = { version = "2.0.0-rc", features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "entity-registry",
    "schema-sync",
] }
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["cors"] }
futures = "0.3.31"


utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }
rand = "0.9.2"
clap = { version = "4.5.51", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
log = "0.4.28"

[features]
default = []
swagger-ui = ["utoipa-swagger-ui"]

[[bin]]
name = "generate_server_schema"
path = "src/bin/generate_server_schema.rs"
