[package]
name = "hex-server"
version = "0.1.0"
edition = "2024"

[dependencies]
maz-util.workspace = true
game-hex.workspace = true
maz-core.workspace = true
maz-trainer.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ort.workspace = true

# TODO: Update Schemars when aide finally updates it internally...
schemars = { version = "0.9.0", features = ["derive", "uuid1"] }
axum = { version = "0.8.1", features = ["macros"] }
aide = { version = "0.15.0", features = [
    "redoc",
    "swagger",
    "scalar",
    "axum-json",
    "macros",
] }
tower-http = { version = "0.6.6", features = ["cors"] }
